--- a/WebCrawler/scrapy.cfg
+++ b/WebCrawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = MstajbakhshWebCrawler.settings
+default = TextClassification.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = MstajbakhshWebCrawler
+project = TextClassification
